# actix_test_orm

./: Cargo.toml  README.md
actix-web-ult/: Cargo.toml
actix-web-ult/src/: handlers.rs  http404.rs  lib.rs  middleware.rs  tmp_engine.rs
src/: app.rs  main.rs  urls.rs  views.rs
src/static/css/: main.css
src/static/img/: Thumbs.db
src/static/img/lightbox/: Thumbs.db
src/static/js/: animatedModal.js  autosizeTextarea.js  bootstrap-modal.min.js  btn.js  form.js  headroom.js  jquery.matchHeight-min.js  lightbox.min.js  main.js  mask.js  off-canvas.js  scroll.js
src/static/scss/: main.scss
src/static/scss/bem/: box-offer.scss  box-start.scss  breadcrumbs.scss  btn.scss  form.scss  header.scss  pagination.scss
src/static/scss/include/: fullmodal.scss  grid.scss  lightbox.scss  modal.scss  offcanvas.scss  slick.scss  table.scss  waves.scss
src/static/scss/main/: add-normalize.scss  basegrid.scss  paddingandmargin.scss  typography.scss  typography2.scss
src/templates/: 404.html  __base.html
src/templates/admin/: login.html
