[package]
name = "ultimate"
version = "0.1.0"
authors = ["koshkin-kna <koshkin.kna@yandex.ru>"]

[dependencies]
actix-web-ult = {path = "actix-web-ult", version = "0.1.0"}
actix-web = "0.7"
env_logger = "0.5"
actix = "0.7"
tera = "0.11"
regex = "1"


# lazy_static = "1.0"
# dotenv = "*"
# env_logger = "0.5"
# actix-redis = "0.4"
# postgres = "0.15"
# serde = "1.0"
# serde_derive = "1.0"
# tera = "*"
# time = "0.1"
# framework = { path = "lib/framework", version = "0.1.0" }